client/src/app.scss
@use "./ui/vars" as *;
@use "./ui/base/mdn";
@use "./ui/base/typography";
@use "./ui/base/reset";
@use "./ui/base/themes";
@use "./ui/base/prism";

// These classes are used across several components.
@use "./ui/molecules/notecards";
@use "./ui/molecules/pagination";
@use "./ui/atoms/button";

/*
  Global :root variables, for those independent of themes
*/
:root {
  /* Typography */
  --font-fallback: BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-sans;

  --font-body: Inter, var(--font-fallback);
  --font-heading: Inter, var(--font-fallback);
  --font-code: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
    monospace;

  --base-font-size: 100%;
  --base-line-height: 1.2;
  --intermediate-line-height: 1.5;
  --heading-line-height: var(--base-line-height);
  --heading-letter-spacing: -0.031rem;
  --font-content-line-height: 1.75;
  --font-body-strong-weight: 600;

  /* based on the following type-scale https://type-scale.com/?size=16&scale=1.200&text=MDN%20Web%20Docs&font=Inter&fontweight=400&bodyfont=body_font_default&bodyfontweight=400&lineheight=1.75&backgroundcolor=%23ffffff&fontcolor=%23000000&preview=false */
  --type-heading-h1-font-size: 2.488rem;
  --type-heading-h2-font-size: 2.074rem;
  --type-heading-h3-font-size: 1.728rem;
  --type-heading-h4-font-size: 1.44rem;
  --type-heading-h5-font-size: 1.2rem;
  --type-base-font-size-rem: 1rem;
  --type-smaller-font-size: 0.833rem;
  --type-tiny-font-size: 0.694rem;

  /* based on the following type-scale https://type-scale.com/?size=16&scale=1.125&text=MDN%20Web%20Docs&font=Inter&fontweight=400&bodyfont=body_font_default&bodyfontweight=400&lineheight=1.75&backgroundcolor=%23ffffff&fontcolor=%23000000&preview=false */
  --type-heading-h1-font-size-mobile: 1.802rem;
  --type-heading-h2-font-size-mobile: 1.602rem;
  --type-heading-h3-font-size-mobile: 1.424rem;
  --type-heading-h4-font-size-mobile: 1.266rem;

  --type-emphasis-m: var(--font-body-strong-weight)
    var(--type-smaller-font-size) / 1.23 var(--font-body);
  --type-label-s: 600 var(--type-tiny-font-size) / 1.2 var(--font-heading);

  --type-heading-h1: 600 var(--type-heading-h1-font-size-mobile) /
    var(--heading-line-height) var(--font-heading);
  --type-heading-h2: 500 var(--type-heading-h2-font-size-mobile) /
    var(--heading-line-height) var(--font-heading);
  --type-heading-h3: 300 var(--type-heading-h3-font-size-mobile) /
    var(--heading-line-height) var(--font-heading);
  --type-heading-h4: 400 var(--type-heading-h4-font-size-mobile) /
    var(--heading-line-height) var(--font-heading);
  --type-heading-h5: 400 var(--type-heading-h5-font-size) /
    var(--heading-line-height) var(--font-heading);
  --type-heading-h6: 400 var(--type-base-font-size-rem) /
    var(--heading-line-height) var(--font-heading);
  --type-article-p: 400 var(--type-base-font-size-rem) /
    var(--font-content-line-height) var(--font-body);

  /* Grid and Layout */
  --max-width: 1440px;
  --gutter: 1rem; /* Space between content and browser window */
  --top-navigation-height: 4rem;
  --top-navigation-offset: -4rem;

  --z-index-back: -1;
  --z-index-top: 9999;
  --z-index-mid: 500;
  --z-index-nav-menu: 200;
  --z-index-search-results: 101;
  --z-index-low: 100;
  --z-index-search-results-home: 99;

  /* Features */
  --elem-radius: 0.25rem;
  --focus-effect: 0 0 0 3px var(--accent-primary-engage);
  --form-elem-height: 2rem;

  /* Major Components */
  --sticky-header-height: 0;
  --top-nav-height: 4rem;
  --main-document-header-height: 6rem;
  --icon-size: 1rem;
}

@media screen and (min-width: $screen-md) {
  :root {
    --type-heading-h1: 600 var(--type-heading-h1-font-size) /
      var(--heading-line-height) var(--font-heading);
    --type-heading-h2: 500 var(--type-heading-h2-font-size) /
      var(--heading-line-height) var(--font-heading);
    --type-heading-h3: 300 var(--type-heading-h3-font-size) /
      var(--heading-line-height) var(--font-heading);
    --type-heading-h4: 400 var(--type-heading-h4-font-size) /
      var(--heading-line-height) var(--font-heading);
  }
}

:target {
  scroll-margin-top: var(--sticky-header-height);
}

body {
  background-color: var(--background-primary);
  color: var(--text-primary);
  accent-color: var(--accent-primary); // for checkboxes, radios, etc.
  scrollbar-color: var(--scrollbar-color) var(--scrollbar-bg);
}

:focus-visible {
  outline-style: auto;
  outline-color: var(--accent-primary);
  outline-offset: 1px;
}

main {
  min-height: 80vh;
}

.about-container,
.main-page-content {
  a {
    &:link,
    &:visited {
      text-decoration: underline;
    }

    &:hover,
    &:focus {
      text-decoration: none;
    }
  }
}

.visually-hidden {
  -webkit-clip-path: inset(50%) !important;
  clip-path: inset(50%) !important;
  border: 0 !important;
  clip: rect(1px, 1px, 1px, 1px) !important;
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  white-space: nowrap !important;
  width: 1px !important;
}

.hidden {
  display: none;
}

pre {
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

a {
  color: var(--text-link);

  &.external:after {
    display: inline-flex;
    width: 10px;
    height: 10px;
    margin-left: 4px;
    background-color: var(--icon-primary);
    mask-image: url("./assets/icons/external.svg");
    mask-size: cover;
    content: "";
  }
}

.expand-this-link:after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  content: "";
}

[type="search"] {
  /* clears the ‘X’ from Internet Explorer */
  &::-ms-clear {
    display: none;
    width: 0;
    height: 0;
  }
  &::-ms-reveal {
    display: none;
    width: 0;
    height: 0;
  }
  /* clears the ‘X’ from Chrome */
  &::-webkit-search-decoration,
  &::-webkit-search-cancel-button,
  &::-webkit-search-results-button,
  &::-webkit-search-results-decoration {
    display: none;
  }
}

u {
  text-decoration-thickness: 0.15rem;
  text-underline-offset: 0.1em;
  text-decoration-color: var(--text-link);
}

.plus .dark,
.plus {
  --background-toc-active: var(--plus-accent-background-color);
  --text-link: var(--plus-accent-color);
  --category-color: var(--plus-accent-color);
  --category-color-background: var(--plus-accent-background-color);
  --code-color: var(--plus-code-color);
  --mark-color: var(--plus-mark-color);
}

.category-html {
  --background-toc-active: var(--html-accent-background-color);
  --category-color: var(--html-accent-color);
  --category-color-background: var(--html-accent-background-color);
  --mark-color: var(--html-mark-color);
}

.category-css {
  --background-toc-active: var(--css-accent-background-color);
  --category-color: var(--css-accent-color);
  --category-color-background: var(--css-accent-background-color);
  --mark-color: var(--css-mark-color);
}

.category-javascript {
  --background-toc-active: var(--js-accent-background-color);
  --category-color: var(--js-accent-color);
  --category-color-background: var(--js-accent-background-color);
  --mark-color: var(--js-mark-color);
}

.category-http {
  --background-toc-active: var(--http-accent-background-color);
  --category-color: var(--http-accent-color);
  --category-color-background: var(--http-accent-background-color);
  --mark-color: var(--http-mark-color);
}

.category-api {
  --background-toc-active: var(--apis-accent-background-color);
  --category-color: var(--apis-accent-color);
  --category-color-background: var(--apis-accent-background-color);
  --mark-color: var(--apis-mark-color);
}

.category-learn {
  --background-toc-active: var(--learn-accent-background-color);
  --category-color: var(--learn-accent-color);
  --category-color-background: var(--learn-accent-background-color);
  --mark-color: var(--api-mark-color);
}

.mify {
  @include mdn.mify;
}

._ify {
  @include mdn.uify;
}

